trunk/Archive2/df/8411764a4c359f/output
main.cpp: In function ‘int main()’:
main.cpp:5:16: error: zero-size array ‘a’
     int a[] = {};
                ^
