trunk/Archive2/df/8411764a4c359f/main.cpp



int main(){
    int a[] = {};
    (void)a;
    return 0;
}
